LAYOUT: Desktop layout complete.

--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
                 Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
         </header>
         <div class="cards">
-            <div class="card">
+            <div id="supervisor" class="card">
                 <hr>
                 <h2 class="card__title">Supervisor</h2>
                 <p class="card__body">Monitors activity to identify project roadblocks</p>
                 <img src="./images/icon-supervisor.svg" alt="">
             </div>
-            <div class="card">
+            <div id="team-builder" class="card">
                 <hr>
                 <h2 class="card__title">Team Builder</h2>
                 <p class="card__body">Scans our talent network to create the optimal team for your project</p>
                 <img src="./images/icon-team-builder.svg" alt="">
             </div>
-            <div class="card">
+            <div id="karma" class="card">
                 <hr>
                 <h2 class="card__title">Karma</h2>
                 <p class="card__body">Regularly evaluates our talent to ensure quality</p>
                 <img src="./images/icon-karma.svg" alt="">
             </div>
-            <div class="card">
+            <div id="calculator" class="card">
                 <hr>
                 <h2 class="card__title">Calculator</h2>
                 <p class="card__body">Uses data from past projects to provide better delivery estimates</p>
